// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ReferenceManage /> should render when [props.cloned_from={ Bar: 'Bee' }] 1`] = `
<div>
  <Connect(ReferenceDetailHeader) />
  <Connect(ReferenceDetailTabs) />
  <Manage__ReferenceManageTable>
    <tbody>
      <tr>
        <th>
          Description
        </th>
        <td>
          boo
        </td>
      </tr>
      <tr>
        <th>
          Organism
        </th>
        <td>
          Bar
        </td>
      </tr>
      <tr>
        <th>
          Data Type
        </th>
        <td>
          Boo
        </td>
      </tr>
    </tbody>
  </Manage__ReferenceManageTable>
  <Connect(Remote) />
  <Clone
    source={
      Object {
        "Bar": "Bee",
      }
    }
  />
  <Box__BoxGroup>
    <Box__BoxGroupHeader>
      <h2>
        Latest Index Build
      </h2>
    </Box__BoxGroupHeader>
    <LatestBuild
      id="foo"
      latestBuild={
        Object {
          "Foo": "fee",
        }
      }
    />
  </Box__BoxGroup>
  <Contributors
    contributors="baz"
  />
  <Connect(Targets) />
</div>
`;

exports[`<ReferenceManage /> should render when [props.remotes_from=null] 1`] = `
<div>
  <Connect(ReferenceDetailHeader) />
  <Connect(ReferenceDetailTabs) />
  <Manage__ReferenceManageTable>
    <tbody>
      <tr>
        <th>
          Description
        </th>
        <td>
          boo
        </td>
      </tr>
      <tr>
        <th>
          Organism
        </th>
        <td>
          Bar
        </td>
      </tr>
      <tr>
        <th>
          Data Type
        </th>
        <td>
          Boo
        </td>
      </tr>
    </tbody>
  </Manage__ReferenceManageTable>
  <Clone
    source={
      Object {
        "bar": "bee",
      }
    }
  />
  <Box__BoxGroup>
    <Box__BoxGroupHeader>
      <h2>
        Latest Index Build
      </h2>
    </Box__BoxGroupHeader>
    <LatestBuild
      id="foo"
      latestBuild={
        Object {
          "Foo": "fee",
        }
      }
    />
  </Box__BoxGroup>
  <Contributors
    contributors="baz"
  />
  <Connect(Targets) />
</div>
`;
